Change static final constants via reflection for JDK>12